--- a/public/kanbas/courses/grades/index.css
+++ b/public/kanbas/courses/grades/index.css
@@ -279,3 +279,11 @@ td.name {
 .highlighted-bottom-border {
   border-bottom: 2px solid lightblue;
 }
+
+.wd-width-150 {
+  min-width: 150px;
+}
+
+.wd-width-200 {
+  min-width: 200px;
+}
