--- a/public/kanbas/courses/assignments/index.css
+++ b/public/kanbas/courses/assignments/index.css
@@ -41,6 +41,9 @@
 .wd-disabled-red-color {
   color: #ff99aa;
 }
+.wd-disabled-green-color {
+  color: #c8c8c8;
+}
 .wd-black-color {
   color: black;
 }
